# trading-analyst

./: .env.dev.example  .gitignore  AGENTS.md  CLAUDE.md  GEMINI.md  LICENSE  README.md  docker-compose.prod.yml  docker-compose.yml  progress.json
backend/: .coveragerc  .dockerignore  .pre-commit-config.yaml  Dockerfile  __init__.py  alembic.ini  create_test_db.sh  init.sql  pyproject.toml  watchlist.txt
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: .gitkeep  20260123_1029-4e3891cf488d_initial_schema.py  20260123_1826-fbac8711232a_seed_stock_lists.py  20260210_0617-777871ff2314_add_live20_atr_rvol_columns.py  20260210_0858-a0e1c5237aca_drop_live20_volume_trend.py  20260210_1828-3e919c771399_convert_atr_to_percentage.py  20260211_0756-bd3dfc84f61f_add_stock_sectors_table.py  20260211_0804-82c52512ae0b_add_live20_sector_etf_column.py  20260211_1040-6f11bd8afa20_add_name_exchange_to_stock_sectors.py  20260213_0853-d26b7940afd7_remove_pricing_columns.py  20260216_0910-0f07a028150e_add_scoring_algorithm_columns.py  20260216_0924-f364d831b617_add_agent_configs_table_and_fk.py  20260219_0000-a1b2c3d4e5f6_remove_short_direction.py  20260219_1200-b2c3d4e5f6a1_add_arena_analytics_columns.py  20260222_0000-c3d4e5f6a1b2_add_signal_score_columns.py  20260222_1000-c3d4e5f6a7b8_add_arena_group_id.py  20260223_0000-d4e5f6a1b2c3_add_portfolio_configs_table.py  20260223_0000-d4e5f6a7b8c9_add_support_resistance_columns.py  20260223_0001-e5f6a1b2c3d4_add_position_size_and_min_score_to_portfolio_configs.py  20260223_0002-f6a1b2c3d4e5_add_trailing_stop_to_portfolio_configs.py  20260223_0100-e5f6a7b8c9d0_add_close_price_column.py  20260224_0000-f6a7b8c9d0e1_merge_arena_group_id_branch.py  20260224_0100-b3c4d5e6f7a8_add_sr_touch_count_columns.py  20260225_0000-d4e5f6a7b8c9_add_bounce_rate_column.py  20260306_0847-0a7455c082f5_merge_signal_score_and_arena_group_id.py  20260315_1000-d4e5f6a7b8c9_add_stock_alerts.py  20260330_1007-e4f013928c7e_add_consecutive_wins_to_arena_.py  20260416_1000-f5a6b7c8d9e0_add_circuit_breaker_and_regime_to_arena_snapshots.py
backend/app/: main.py
backend/app/api/v1/: __init__.py  account.py  agent_configs.py  alerts.py  arena.py  health.py  indicators.py  live20.py  portfolio_configs.py  setup_sim.py  stock_lists.py  stocks.py
backend/app/brokers/: __init__.py  base.py  ib.py  mock.py
backend/app/constants/: __init__.py  sectors.py
backend/app/core/: config.py  constants.py  database.py  deps.py  docs.py  exceptions.py
backend/app/indicators/: __init__.py  bounce_rate.py  candlestick.py  candlestick_interpretation.py  cci_analysis.py  fibonacci.py  ma_analysis.py  multi_day_patterns.py  registry.py  rsi2_analysis.py  technical.py  three_candle_patterns.py  trend.py  two_candle_patterns.py  volume.py
backend/app/models/: __init__.py  agent_config.py  alert.py  arena.py  base.py  ib_order.py  live20_run.py  portfolio_config.py  recommendation.py  stock.py  stock_list.py  stock_sector.py
backend/app/providers/: __init__.py  base.py  ib_data.py  mock.py  yahoo.py
backend/app/repositories/: README.md  __init__.py  agent_config_repository.py  alert_repository.py  base.py  ib_order_repository.py  live20_run_repository.py  portfolio_config_repository.py  stock_list_repository.py  stock_price.py
backend/app/schemas/: __init__.py  account.py  agent_config.py  alert.py  arena.py  base.py  indicators.py  live20.py  live20_run.py  portfolio_config.py  setup_sim.py  stock_list.py
backend/app/services/: __init__.py  account_service.py  alert_monitor.py  alert_service.py  cache_service.py  data_service.py  job_queue_service.py  job_worker.py  live20_evaluator.py  live20_service.py  live20_worker.py  portfolio_selector.py  setup_sim_service.py  trading_calendar_service.py
backend/app/services/arena/: __init__.py  agent_protocol.py  agent_registry.py  analytics.py  arena_worker.py  simulation_engine.py  trailing_stop.py
backend/app/services/pricing_strategies/: __init__.py  calculator.py  types.py
backend/app/utils/: __init__.py  structured_logging.py  technical_indicators.py  validation.py
backend/docs/: PRE_COMMIT_SETUP.md
backend/tests/: conftest.py  setup_test_db.py  test_main.py
backend/tests/indicators/: __init__.py  test_candlestick.py  test_cci.py  test_cci_analysis.py  test_ma_analysis.py  test_multi_day_patterns.py  test_rsi2_analysis.py  test_technical.py  test_technical_extended.py  test_three_candle_patterns.py  test_trend.py  test_two_candle_patterns.py  test_volume.py
backend/tests/integration/: ACCOUNT_STATUS_TEST_RESULTS.md  __init__.py  fixtures.py  helpers.py  test_account_status_integration.py  test_agent_config_pipeline.py  test_alerts_api.py  test_arena_api.py  test_arena_benchmark.py  test_arena_price_cache.py  test_arena_simulation.py  test_cache_integration.py  test_ib_broker_integration.py  test_ib_data_provider_integration.py  test_ib_order_persistence.py  test_indicator_analysis.py  test_job_queue_integration.py  test_live20_api.py  test_live20_recommend.py  test_live20_rsi2_pipeline.py  test_live20_runs_api.py  test_setup_sim_api.py  test_smart_cache_freshness.py  test_stock_price_race_condition.py
backend/tests/test_api/: test_health.py  test_indicators.py  test_sector_trend.py  test_stock_lists.py
backend/tests/test_constants/: test_sectors.py
backend/tests/test_models/: __init__.py  test_arena.py  test_stock_price.py
backend/tests/test_services/: test_data_service.py
backend/tests/unit/: __init__.py  test_cache_freshness.py  test_config.py  test_deps.py  test_indicators_unit.py
backend/tests/unit/api/: test_agent_configs.py  test_portfolio_configs.py
backend/tests/unit/brokers/: __init__.py  test_ib_broker.py
backend/tests/unit/indicators/: test_bounce_rate.py  test_candlestick_interpretation.py  test_cluster_sr.py  test_fibonacci.py  test_registry.py
backend/tests/unit/providers/: __init__.py  (+2 more)
backend/tests/utils/: __init__.py  fixtures.py  mock_data.py  test_technical_indicators.py  test_technical_indicators_accuracy.py
(+375 files in other folders)
